# src/routers/products/categoryRote.js
@@ -9,19 +9,18 @@ router.get('/', (req, res) => {
     res.send('Hello World!')
 })
 
-router.post('/addCategory/', categoryMiddlewares.addCategoryValidator, wrapAsync(categoryController.addCategory))
+router.post('/category', categoryMiddlewares.addCategoryValidator, wrapAsync(categoryController.addCategory))
 
 //get all categories
-router.get('/getAllCategories',wrapAsync(categoryController.getAllCategories))
+router.get('/category',wrapAsync(categoryController.getAllCategories))
 
 //update category
-router.post('/updateCategory',categoryMiddlewares.updateCategoryValidator, wrapAsync(categoryController.updateCategory))
+router.put('/category',categoryMiddlewares.updateCategoryValidator, wrapAsync(categoryController.updateCategory))
 
 //delete category
-router.delete('/deleteCategory', categoryMiddlewares.deleteCategoryValidator, wrapAsync(categoryController.deleteCategory))
+router.delete('/category', categoryMiddlewares.deleteCategoryValidator, wrapAsync(categoryController.deleteCategory))
 
 // get category hot trend
-
 
 
 
