# src/routers/products/productRotes.js
@@ -5,22 +5,22 @@ import wrapAsync from '../../utils/handlers.js'
 const router = express.Router()
 
 
-router.post('/addProduct', productMiddlewares.addProductValidator, wrapAsync(productController.addProductController))
-router.post('/updateProduct', productMiddlewares.updateProductValidator, wrapAsync(productController.updateProductController))
-router.delete('/deleteProduct', wrapAsync(productController.deleteProductController))
+router.post('/product', productMiddlewares.addProductValidator, wrapAsync(productController.addProductController))
+router.put('/product', productMiddlewares.updateProductValidator, wrapAsync(productController.updateProductController))
+router.delete('/product', wrapAsync(productController.deleteProductController))
 //get product by category
-router.get('/getProductByCategory', wrapAsync(productController.getProductByCategory))
+router.get('/get-product-by-category', wrapAsync(productController.getProductByCategory))
 //get onet product
-router.get('/getOneProduct', wrapAsync(productController.getOneProduct))
+router.get('/get-by-id', wrapAsync(productController.getOneProduct))
 
 
 
 // ---------------------------------------- Popular product----------------------------------------
 //update product Popular
-router.post('/updateProductPopular', wrapAsync(productController.updateProductPopularController))
+router.post('/product-popular', wrapAsync(productController.updateProductPopularController))
 
 //get prodtuct Popular by category
-router.get('/getProductPopularByCategory', wrapAsync(productController.getProductPopularByCategory))
+router.get('/get-product-popular-by-category', wrapAsync(productController.getProductPopularByCategory))
 
 
 export default router;
